@@ -5,11 +5,9 @@ import static org.junit.jupiter.api.Assertions.assertTrue;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.when;
-import static org.springframework.boot.test.context.SpringBootTest.WebEnvironment.RANDOM_PORT;
 import static school.hei.haapi.endpoint.rest.model.MobileMoneyType.AIRTEL_MONEY;
 import static school.hei.haapi.endpoint.rest.model.MobileMoneyType.MVOLA;
 import static school.hei.haapi.endpoint.rest.model.MobileMoneyType.ORANGE_MONEY;
-import static school.hei.haapi.integration.MpbsVerificationIT.ContextInitializer.SERVER_PORT;
 import static school.hei.haapi.integration.StudentIT.student1;
 import static school.hei.haapi.integration.conf.TestUtils.FEE1_ID;
 import static school.hei.haapi.integration.conf.TestUtils.FEE2_ID;
@@ -17,7 +15,6 @@ import static school.hei.haapi.integration.conf.TestUtils.MANAGER1_TOKEN;
 import static school.hei.haapi.integration.conf.TestUtils.STUDENT1_ID;
 import static school.hei.haapi.integration.conf.TestUtils.STUDENT1_TOKEN;
 import static school.hei.haapi.integration.conf.TestUtils.STUDENT2_ID;
-import static school.hei.haapi.integration.conf.TestUtils.anAvailableRandomPort;
 import static school.hei.haapi.integration.conf.TestUtils.assertThrowsForbiddenException;
 import static school.hei.haapi.integration.conf.TestUtils.setUpCognito;
 import static school.hei.haapi.integration.conf.TestUtils.setUpS3Service;
@@ -25,31 +22,22 @@ import static school.hei.haapi.integration.conf.TestUtils.setUpS3Service;
 import java.time.Instant;
 import java.util.List;
 import org.junit.jupiter.api.BeforeEach;
-import org.junit.jupiter.api.Disabled;
 import org.junit.jupiter.api.Test;
 import org.springframework.boot.test.autoconfigure.web.servlet.AutoConfigureMockMvc;
-import org.springframework.boot.test.context.SpringBootTest;
 import org.springframework.boot.test.mock.mockito.MockBean;
-import org.springframework.test.context.ContextConfiguration;
 import org.testcontainers.junit.jupiter.Testcontainers;
 import school.hei.haapi.endpoint.rest.api.PayingApi;
 import school.hei.haapi.endpoint.rest.client.ApiClient;
 import school.hei.haapi.endpoint.rest.model.MpbsVerification;
 import school.hei.haapi.http.model.TransactionDetails;
-import school.hei.haapi.integration.conf.AbstractContextInitializer;
-import school.hei.haapi.integration.conf.MockedThirdParties;
+import school.hei.haapi.integration.conf.FacadeITMockedThirdParties;
 import school.hei.haapi.integration.conf.TestUtils;
 import school.hei.haapi.model.exception.ApiException;
 import school.hei.haapi.service.mobileMoney.MobileMoneyApi;
-import software.amazon.awssdk.services.eventbridge.EventBridgeClient;
 
-@SpringBootTest(webEnvironment = RANDOM_PORT)
 @Testcontainers
-@ContextConfiguration(initializers = MpbsVerificationIT.ContextInitializer.class)
 @AutoConfigureMockMvc
-@Disabled
-public class MpbsVerificationIT extends MockedThirdParties {
-  @MockBean EventBridgeClient eventBridgeClient;
+public class MpbsVerificationIT extends FacadeITMockedThirdParties {
 
   @MockBean(name = "OrangeApi")
   MobileMoneyApi orangeApiMock;
@@ -63,6 +51,10 @@ public class MpbsVerificationIT extends MockedThirdParties {
     setUpS3Service(fileService, student1());
     setUpMobileMock(orangeApiMock);
     setUpMobileMock(mvolaApiMock);
+  }
+
+  private ApiClient anApiClient(String token) {
+    return TestUtils.anApiClient(token, localPort);
   }
 
   private void setUpMobileMock(MobileMoneyApi mobileMoneyApi) {
@@ -97,7 +89,7 @@ public class MpbsVerificationIT extends MockedThirdParties {
 
     List<MpbsVerification> actual = api.getMpbsVerifications(STUDENT1_ID, FEE1_ID);
 
-    assertEquals(expected1MpbsVerification(), actual.get(0));
+    assertEquals(expected1MpbsVerification(), actual.getFirst());
     assertTrue(actual.contains(expected1MpbsVerification()));
   }
 
@@ -133,18 +125,5 @@ public class MpbsVerificationIT extends MockedThirdParties {
         .creationDatetime(Instant.parse("2021-11-08T08:25:24.00Z"))
         .creationDatetimeOfMpbs(Instant.parse("2021-11-08T08:25:24.00Z"))
         .creationDatetimeOfPaymentInPsp(Instant.parse("2021-11-08T08:25:24.00Z"));
-  }
-
-  private static ApiClient anApiClient(String token) {
-    return TestUtils.anApiClient(token, SERVER_PORT);
-  }
-
-  static class ContextInitializer extends AbstractContextInitializer {
-    public static int SERVER_PORT = anAvailableRandomPort();
-
-    @Override
-    public int getServerPort() {
-      return SERVER_PORT;
-    }
   }
 }
